--- a/src/test/resources/sample_config.ini
+++ b/src/test/resources/sample_config.ini
@@ -132,6 +132,7 @@ AUTO_SENSITIVITY_SD	3.0
 PRE_WINDOW_SIZE	48
 POST_WINDOW_SIZE	48
 CONFIDENCE	0.8
+USE_POST_WINDOW_AVERAGE_AS_ACTUAL_VALUE true
 
 ###############################
 ### SpectralSmoother Config ###
